fix:scrollbar none in albums carousel

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,19 @@
     --chart-5: 27 87% 67%;
   }
 
+  @layer utilities {
+  /* Hide scrollbar for Chrome, Safari, and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge, and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;     /* Firefox */
+  }
+}
+
   html {
     scroll-behavior: smooth;
   }
